<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.trippntechnology.tnt.flashcards.ux.fragments.main.flashcards.FlashCardsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/flashCardCardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_height"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.trippntechnology.tnt.flashcards.views.FlashCardView
                android:id="@+id/flashCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:line_space="@dimen/flash_card_line_space"
                app:stroke_width="@dimen/flash_card_stroke_width" />
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/answer_button_size"
            android:layout_height="@dimen/answer_button_size"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{(v)->viewModel.submitAnswer(v)}"
            android:text="@string/a"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/answer_button_size"
            android:layout_height="@dimen/answer_button_size"
            android:layout_marginBottom="32dp"
            android:onClick="@{(v)->viewModel.submitAnswer(v)}"
            android:text="@string/b"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/answer_button_size"
            android:layout_height="@dimen/answer_button_size"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{(v)->viewModel.submitAnswer(v)}"
            android:text="@string/c"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/answer_button_size"
            android:layout_height="@dimen/answer_button_size"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{(v)->viewModel.submitAnswer(v)}"
            android:text="@string/d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/answer_button_size"
            android:layout_height="@dimen/answer_button_size"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{(v)->viewModel.submitAnswer(v)}"
            android:text="@string/f"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintStart_toEndOf="@+id/button7" />

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/answer_button_size"
            android:layout_height="@dimen/answer_button_size"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{(v)->viewModel.submitAnswer(v)}"
            android:text="@string/g"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/answer_button_size"
            android:layout_height="@dimen/answer_button_size"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{(v)->viewModel.submitAnswer(v)}"
            android:text="@string/e"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintStart_toEndOf="@+id/button4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>